[new] logcat.html page. A experimental page with websocket to show some information through the logcat.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".webserver.InspeckageService"
             android:enabled="true" />
 
+        <service
+            android:name=".log.LogService"
+            android:enabled="true" />
+
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/title_activity_main"
