--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    provided 'de.robv.android.xposed:api:81'
+    provided 'de.robv.android.xposed:api:5+'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
