--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
-    compile files('libs/java_websocket.jar')
+    compile 'org.java-websocket:Java-WebSocket:1.3.0'
 }
