--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 18
         targetSdkVersion 23
         versionCode 6
-        versionName "2.0"
+        versionName "2.1"
     }
 
     buildTypes {
@@ -27,6 +27,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     provided 'de.robv.android.xposed:api:5+'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
