add glyphicons css

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,19 +2,19 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "mobi.acpm.inspeckage"
         minSdkVersion 18
         targetSdkVersion 23
-        versionCode 8
+        versionCode 9
         versionName "2.2"
     }
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
