--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
     compile 'org.java-websocket:Java-WebSocket:1.3.0'
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
