--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,12 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <receiver android:name=".receivers.InspeckageWebReceiver"  android:exported="false">
+            <intent-filter>
+                <action android:name="mobi.acpm.inspeckage.INSPECKAGE_FILTER"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
