--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.0'
-
+    compileSdkVersion 26
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "mobi.acpm.inspeckage"
-        minSdkVersion 18
-        targetSdkVersion 23
-        versionCode 9
-        versionName "2.3"
+        minSdkVersion 21
+        targetSdkVersion 26
+        versionCode 10
+        versionName "2.4"
     }
 
     buildTypes {
@@ -24,13 +23,13 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    provided 'de.robv.android.xposed:api:5+'
-    compile 'com.google.code.gson:gson:2+'
-    compile group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.android.support:support-v4:22.2.1'
-    compile 'org.java-websocket:Java-WebSocket:1.3.0'
-    compile 'com.google.android.gms:play-services:6.5.87'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compileOnly 'de.robv.android.xposed:api:5+'
+    implementation 'com.google.code.gson:gson:2+'
+    implementation group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'org.java-websocket:Java-WebSocket:1.3.0'
+    implementation 'com.google.android.gms:play-services:12.0.1'
 }
